--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <h1></h1>
     <h2>RIPSEC</h2>
-    <a class="hubungi_prinsh big-white" href="evorip, pex and absent needs money (broken heart emoji here)">evorip, pex and absent needs money (broken heart emoji here)</a>
+    <a class="hubungi_prinsh big-white" href="i need money nigga (money launderer // evorip)">evorip, pex and absent needs money (broken heart emoji here)</a>
     <p>
     <a class="hubungi_prinsh" href="mailto:evorip@proton.me">evorip@proton.me</a>
 </body>
